<resources>
    <string name="app_name">GoAppsTugas3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="tv_createaccount">Create a new Account!</string>
    <string name="btn_sigIn">Sign In</string>
    <string name="tv_silahkan">Silahkan login untuk memulai aplikasi</string>
    <string name="img_logo">Logo</string>
    <string name="menu_developer">developer</string>
</resources>