<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sign_in">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/imglogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext" />

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imglogo"
            android:layout_marginBottom="50dp"
            android:text="@string/tv_silahkan"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/Username"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/Username"
            android:inputType="text" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="71dp"
            android:layout_marginTop="-11dp"
            android:layout_marginEnd="77dp"
            android:autofillHints="@string/Password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/Password" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="231dp"
            android:layout_height="51dp"
            android:layout_below="@+id/etPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="78dp"
            android:background="@drawable/btn_sign_in"
            android:text="@string/btn_sigIn"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            android:layout_below="@+id/btnlogin"
            android:text="@string/tv_createaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>